<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="open_location_permission_dialog_label_location_not_permitted">Akep Nettest nuk lejohet të përdor vendndodhjen tuaj. Dëshironi të lejoni që Akep Nettest të përdor vendndodhjen tuaj?</string>
    <string name="notification_test_title">Akep nettest po ekzekutohet</string>
    <string name="notification_signal_test_text">Matja e sinjalit Akep Nettest po ekzekutohet në sfond</string>
    <string name="text_loop_instruction_1">Opsioni i modalitetit loop për përdoruesit e interesuar teknikisht lejon përsëritjen automatike të Akep Nettest. Testi i parë fillon menjëherë pas aktivizimit të modusit loop; testet e mëtejshme kryhen kur ose koha e pritjes ka kaluar ose distanca e specifikuar është mbuluar. Testet do të kryhen derisa të arrihet numri i konfiguruar i testeve. Fuqia e sinjalit matet vazhdimisht, gjithashtu midis dy provave. Modeli i lakut mund të ndalet në çdo kohë, përkatësisht ndalet pas 48 orësh. Duhet theksuar qartë se për shkak të mënyrës së lakut nuk mund të përjashtohet që testuesi të identifikohet.</string>
    <string name="loop_mode_finished">Modaliteti i lakut Akep Nettest përfundoi!</string>
    <string name="text_terms_agree">Pajtohem me politikën e privatësisë së Specure dhe kushtet e përdorimit për Akep Nettest.</string>
    <string name="text_home_run">Drejtoni Matjen e Shpejtësisë</string>
    <string name="text_basic_measurement">Matja e shpejtësisë</string>
    <string name="basic_result_title">Rezultati themelor</string>
    <string name="test_bottom_test_status_jitter">Hidhërimë</string>
    <string name="test_packet_loss">Humbja e paketave</string>
    <string name="menu_button_title_page">Shtëpi</string>
    <string name="menu_button_history">Historia</string>
    <string name="menu_button_statistics">Statistikat</string>
    <string name="menu_button_map">Harta</string>
    <string name="dialog_title_error">Gabim</string>
    <string name="error_unknown">Lidhje e dobët. Ju lutemi provoni përsëri më vonë</string>
    <string name="no_internet_connection_not_load_data">Nuk ka lidhje interneti. Të dhënat nuk mund të ngarkohen.</string>
    <string name="request_failure">Ndodhi një gabim gjatë marrjes së të dhënave.</string>
    <string name="home_attention">Vëmendje</string>
    <string name="home_no_internet_connection">Pa lidhje interneti!</string>
    <string name="home_no_internet_connection_details">Asnjë provë nuk është e mundur.</string>
    <string name="home_signal_value">%1$d dBm</string>
    <string name="home_wifi">WLAN</string>
    <string name="public_ip_address">Adresa publike</string>
    <string name="private_ip_address">Adresa private</string>
    <string name="preferences_information">Informacioni</string>
    <string name="options">Cilësimet</string>
    <string name="preferences_general_settings">Gjeneral</string>
    <string name="preferences_terms_of_service">Kushtet e shërbimit</string>
    <string name="preferences_loop_test_count">Numri i Matjeve</string>
    <string name="loop_mode_clarification">Kur modaliteti i lakut është i aktivizuar, testet e reja kryhen automatikisht pas kohës së konfiguruar të pritjes ose kur pajisja lëviz më shumë se distanca e konfiguruar.</string>
    <string name="preferences_privacy">Privatësia</string>
    <string name="preferences_persistent_clientUUID">Klient i vazhdueshëm UUID</string>
    <string name="preferences_persistent_clientUUID_summary">Nevojitet klient i vazhdueshëm UUID për të mundësuar historinë e matjeve dhe sinkronizimin e rezultateve midis pajisjeve</string>
    <string name="preferences_analytics">Analizat</string>
    <string name="preferences_analytics_summary">Aktivizoni analizat dhe dërgoni tek ne gjurmët e aksidentit</string>
    <string name="preferences_location_summary">Menaxhoni lejet në lidhje me gjurmimin e vendndodhjes</string>
    <string name="preferences_loop_test_number">Zgjidhni numrin e testeve</string>
    <string name="preferences_version">Version</string>
    <string name="preferences_qos_measurement">Matja e QoS</string>
    <string name="preferences_location">Vendndodhja</string>
    <string name="preferences_loop_mode">Modaliteti i lakut</string>
    <string name="preferences_loop_mode_summary">Test i ri pas kohës së pritjes ose mbulimit të distancës. Maks. 2 dite</string>
    <string name="preferences_loop_mode_min_delay">Koha e pritjes (në minuta)</string>
    <string name="preferences_loop_mode_max_movement">Distanca (në metra)</string>
    <string name="preferences_expert_mode">Mënyra e ekspertit</string>
    <string name="preferences_expert_mode_summary">Trego cilësimet dhe informacionin e përparuar</string>
    <string name="preferences_ipv4_only">Vetëm IPv4</string>
    <string name="preferences_ipv4_only_sum">Mos përdorni IPv6</string>
    <string name="preferences_radio_info">Radio info</string>
    <string name="preferences_radio_info_sum">Detaje mbi konfigurimin e radios</string>
    <string name="preferences_client_uuid">Klienti UUID</string>
    <string name="preferences_about">Rreth</string>
    <string name="preferences_data_protection">Politika e privatësisë</string>
    <string name="preferences_enter_code">Ju lutemi shkruani kodin</string>
    <string name="preferences_developer_control_server">Kontrolloni serverin</string>
    <string name="preferences_override_control_server">Anulo serverin e kontrollit</string>
    <string name="preferences_override_control_server_sum">Aktivizoni cilësimet e serverit të kontrollit të personalizuar</string>
    <string name="preferences_override_control_server_host">Kontrolloni hostin</string>
    <string name="preferences_override_control_server_port">Porta e kontrollit</string>
    <string name="preferences_override_control_server_ssl">Kontrolloni SSL</string>
    <string name="preferences_override_control_server_ssl_sum">Përdorni lidhjen e koduar për të kontrolluar serverin</string>
    <string name="preferences_developer_options_disabled">Opsionet e zhvilluesit janë çaktivizuar</string>
    <string name="preferences_developer_options_available">Mundësitë e krijuesit të mundshëm</string>
    <string name="preferences_developer_try_again">Provo përsëri!</string>
    <string name="preferences_developer_map_server">Serveri i hartës</string>
    <string name="preferences_developer_map_override">Anulo serverin e hartës</string>
    <string name="preferences_developer_map_override_sum">Aktivizoni cilësimet e serverit të hartave të personalizuara</string>
    <string name="preferences_developer_map_host">Pritësi i hartës</string>
    <string name="preferences_developer_map_port">Porti i hartës</string>
    <string name="preferences_developer_map_ssl">Server i hartës SSL</string>
    <string name="preferences_developer_map_ssl_sum">Përdorni lidhje të koduar në serverin e hartës</string>
    <string name="preferences_category_developer_qos_server">Serveri QoS</string>
    <string name="preferences_developer_qos_ssl">Server QoS SSL</string>
    <string name="preferences_developer_qos_ssl_sum">Përdorni lidhjen e koduar me serverin QoS</string>
    <string name="preferences_all_disabled">Çaktivizohet.</string>
    <string name="preferences_server_selection">Zgjedhja e serverit</string>
    <string name="preferences_default_server_selection" />
    <string name="label_server_selection">Zgjedhja e serverit</string>
    <string name="preferences_tag">Etiketoj</string>
    <string name="location_dialog_label_title">Vendndodhja</string>
    <string name="location_dialog_label_position">Pozicioni</string>
    <string name="location_dialog_label_accuracy">Saktësia</string>
    <string name="location_dialog_label_age">Mosha</string>
    <string name="location_dialog_label_source">Burimi</string>
    <string name="location_dialog_label_altitude">Lartësi</string>
    <string name="location_dialog_label_satellites">Satelitë</string>
    <string name="open_gps_setting_dialog_label_gps_not_enabled">Shërbimet e vendndodhjes nuk janë aktivizuar. Dëshironi të modifikoni cilësimet e vendndodhjes?</string>
    <string name="open_gps_setting_dialog_label_open_gps_setting">Hapni cilësimet e vendndodhjes</string>
    <string name="open_gps_setting_dialog_label_cancel">Anulo</string>
    <string name="location_dialog_age">%1$s s</string>
    <string name="location_dialog_accuracy">%1$s m</string>
    <string name="location_location_direction_n">N %1$s</string>
    <string name="location_location_direction_e">E %1$s</string>
    <string name="location_location_direction_s">S %1$s</string>
    <string name="location_location_direction_w">W %1$s</string>
    <string name="open_location_permission_dialog_label_open_permission_setting">Hapni cilësimet e aplikacionit</string>
    <string name="text_ip_address_not_available">Adresa nuk është e disponueshme</string>
    <string name="input_setting_dialog_ok">Ne rregull</string>
    <string name="input_setting_dialog_cancel">Anulo</string>
    <string name="loop_mode_max_delay_invalid" tools:ignore="PluralsCandidate">Ju lutemi zgjidhni një numër midis %1$d dhe %2$d.</string>
    <string name="about_client_uuid_copied">UUID i klientit është kopjuar në clipboard.</string>
    <string name="client_not_registered">Aplikacioni nuk është regjistruar, provo përsëri më vonë.</string>
    <string name="measurement_ping_value">%1$s</string>
    <string name="measurement_ping_value_1f">%1$.1f</string>
    <string name="measurement_download_upload_speed">%1$s</string>
    <string name="measurement_download">Shkarko</string>
    <string name="measurement_upload">Ngarkoni</string>
    <string name="measurement_dash">-</string>
    <string name="measurement_speed_chart_x_label_min">0s</string>
    <string name="measurement_speed_chart_x_label_max">8-të</string>
    <string name="measurement_ping">Ping</string>
    <string name="measurement_down">Poshtë</string>
    <string name="measurement_up">Lart</string>
    <string name="measurement_qos">Cilësia e shërbimit (QoS)</string>
    <string name="measurement_qos_web_site">Uebfaqe</string>
    <string name="measurement_qos_transparent_connection">Lidhje transparente</string>
    <string name="measurement_qos_dns">DNS</string>
    <string name="measurement_qos_tcp_ports">Portet TCP</string>
    <string name="measurement_qos_udp_ports">Portet UDP</string>
    <string name="measurement_qos_unmodified_content">Përmbajtje e pa modifikuar</string>
    <string name="measurement_qos_traceroute">Gjurmë gjurmë</string>
    <string name="measurement_qos_voip">VoIP</string>
    <string-array name="measurement_speed_chart_y_labels">
        <item>1</item>
        <item>10</item>
        <item>100</item>
        <item>1000</item>
    </string-array>
    <string name="label_qos">QoS</string>
    <string name="label_upload">Ngarkoni</string>
    <string name="label_download">Shkarko</string>
    <string name="label_ping">Ping</string>
    <string name="label_init">Fillimi</string>
    <string name="label_signal_strength">Sinjal</string>
    <string name="network_label">Rrjeti</string>
    <string name="title_cancel_measurement">Dëshiron vërtet të anulosh matjen në vazhdim?</string>
    <string name="text_continue_measurement">Vazhdoni matjen</string>
    <string name="text_cancel_measurement">Anuloni matjen</string>
    <string name="history_item_header_down">Shkarko</string>
    <string name="history_item_header_up">Ngarkoni</string>
    <string name="history_item_header_ping">Ping</string>
    <string name="button_agree">Pajtohem</string>
    <string name="title_permissions_uuid">Klient i vazhdueshëm UUID</string>
    <string name="text_permissions_uuid">Klient UUID është një ID e gjeneruar rastësisht që ruhet me çdo matje. Klient i Përhershëm UUID do të thotë që ID-ja është e njëjtë për çdo matje tuaj. Shtë e nevojshme për të mundësuar historinë e matjeve dhe sinkronizimin e rezultateve midis pajisjeve. Mund ta ndryshoni më vonë te cilësimet.</string>
</resources>